--- a/ablations/config_with_update_criteretion_cl2r/config_5tasks_fd_without_pod_loss_variation_weights_cl2r.yml
+++ b/ablations/config_with_update_criteretion_cl2r/config_5tasks_fd_without_pod_loss_variation_weights_cl2r.yml
@@ -6,11 +6,13 @@ stages:
 batch_size: 128
 num_workers: 8
 
-criterion_weight_base: 1
+criterion_weight_base: 5
 spatial_lambda_c_base: 3
 rehearsal: 20
-fixed_weight: True
+fixed_weight: False
 pod_loss: False
-cuda_device: "cuda"
-use_partial_memory: False
 type_update_criterion_weight: "cl2r"
+use_partial_memory: True
+cuda_device: "cuda:0"
+start: 60
+increment: 10
