--- a/ablations/config_with_update_criteretion_cl2r/config_5tasks_fd_without_pod_loss_variation_weights_cl2r.yml
+++ b/ablations/config_with_update_criteretion_cl2r/config_5tasks_fd_without_pod_loss_variation_weights_cl2r.yml
@@ -11,7 +11,7 @@ spatial_lambda_c_base: 3
 rehearsal: 20
 fixed_weight: False
 pod_loss: False
-type_update_criterion_weight: "cl2r"
+type_update_criterion_weight: "pod"
 use_partial_memory: True
 cuda_device: "cuda:0"
 start: 60
