--- a/ablations/config_with_update_criteretion_pod/full_memory/config_5tasks_hoc_without_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/full_memory/config_5tasks_hoc_without_pod_loss_variation_weights.yml
@@ -10,9 +10,9 @@ criterion_weight_base: 1
 spatial_lambda_c_base: 3
 rehearsal: 20
 fixed_weight: False
-pod_loss: True
+pod_loss: False
 type_update_criterion_weight: "pod"
-cuda_device: "cuda:1"
 use_partial_memory: False
-start: 60
+cuda_device: "cuda:1"
 method: "hoc"
+start: 60
