--- a/ablations/config_with_update_criteretion_cl2r/full_memory/config_5tasks_hoc_with_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_cl2r/full_memory/config_5tasks_hoc_with_pod_loss_variation_weights.yml
@@ -6,11 +6,13 @@ stages:
 batch_size: 128
 num_workers: 8
 
-criterion_weight_base: 10
+criterion_weight_base: 1
 spatial_lambda_c_base: 3
 rehearsal: 20
-fixed_weight: True
+fixed_weight: False
 pod_loss: True
-type_update_criterion_weight: "cl2r"
+type_update_criterion_weight: "pod"
+cuda_device: "cuda:1"
 use_partial_memory: False
-cuda_device: "cuda:0"
+start: 60
+method: "hoc"
