--- a/ablations/config_with_update_criteretion_cl2r/partial_memory/config_5tasks_fd_without_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_cl2r/partial_memory/config_5tasks_fd_without_pod_loss_variation_weights.yml
@@ -6,13 +6,12 @@ stages:
 batch_size: 128
 num_workers: 8
 
-criterion_weight_base: 1
+criterion_weight_base: 5
 spatial_lambda_c_base: 3
 rehearsal: 20
 fixed_weight: False
 pod_loss: False
-type_update_criterion_weight: "pod"
+type_update_criterion_weight: "cl2r"
 use_partial_memory: True
-cuda_device: "cuda:1"
-method: "hoc"
+cuda_device: "cuda:0"
 start: 60
