--- a/ablations/config_with_update_criteretion_cl2r/partial_memory/config_5tasks_hoc_with_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_cl2r/partial_memory/config_5tasks_hoc_with_pod_loss_variation_weights.yml
@@ -10,9 +10,9 @@ criterion_weight_base: 1
 spatial_lambda_c_base: 3
 rehearsal: 20
 fixed_weight: False
-pod_loss: False
+pod_loss: True
 type_update_criterion_weight: "pod"
-use_partial_memory: True
 cuda_device: "cuda:1"
-method: "hoc"
+use_partial_memory: True
 start: 60
+method: "hoc"
