--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_with_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_with_pod_loss_variation_weights.yml
@@ -12,7 +12,7 @@ rehearsal: 20
 fixed_weight: False
 pod_loss: True
 type_update_criterion_weight: "pod"
-cuda_device: "cuda:1"
-use_partial_memory: False
+cuda_device: "cuda:0"
+use_partial_memory: True
 start: 60
 method: "hoc"
