--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_with_pod_loss_negative_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_with_pod_loss_negative_variation_weights.yml
@@ -14,6 +14,6 @@ pod_loss: True
 type_update_criterion_weight: "pod"
 cuda_device: "cuda:0"
 use_partial_memory: True
-start: 10
-increment: 15
+start: 60
 method: "hoc"
+pod_loss_negative: True
