--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_without_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_without_pod_loss_variation_weights.yml
@@ -15,4 +15,5 @@ type_update_criterion_weight: "pod"
 use_partial_memory: True
 cuda_device: "cuda:1"
 method: "hoc"
-start: 60
+start: 10
+increment: 15
