--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hocnew_with_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hocnew_with_pod_loss_variation_weights.yml
@@ -12,8 +12,7 @@ rehearsal: 20
 fixed_weight: False
 pod_loss: True
 type_update_criterion_weight: "pod"
-cuda_device: "cuda:0"
+cuda_device: "cuda:1"
 use_partial_memory: True
-start: 10
-increment: 15
-method: "hoc"
+start: 60
+method: "hoc_new"
