Fixed some bugs

--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_with_pod_loss_negative_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hoc_with_pod_loss_negative_variation_weights.yml
@@ -14,6 +14,7 @@ pod_loss: True
 type_update_criterion_weight: "pod"
 cuda_device: "cuda:0"
 use_partial_memory: True
-start: 60
+start: 20
+increment: 20
 method: "hoc"
 pod_loss_negative: True
