--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hocnew_with_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_hocnew_with_pod_loss_variation_weights.yml
@@ -14,5 +14,6 @@ pod_loss: True
 type_update_criterion_weight: "pod"
 cuda_device: "cuda:1"
 use_partial_memory: True
-start: 60
+start: 20
+increment: 20
 method: "hoc_new"
