--- a/ablations/config_with_update_criteretion_pod/full_memory/config_5tasks_hoc_with_pod_loss_negative_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/full_memory/config_5tasks_hoc_with_pod_loss_negative_variation_weights.yml
@@ -12,8 +12,9 @@ rehearsal: 20
 fixed_weight: False
 pod_loss: True
 type_update_criterion_weight: "pod"
-cuda_device: "cuda:1"
+cuda_device: "cuda:0"
 use_partial_memory: False
 start: 20
 increment: 20
 method: "hoc"
+pod_loss_negative: True
