--- a/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_fd_without_pod_loss_variation_weights.yml
+++ b/ablations/config_with_update_criteretion_pod/partial_memory/config_5tasks_fd_without_pod_loss_variation_weights.yml
@@ -13,5 +13,6 @@ fixed_weight: False
 pod_loss: False
 type_update_criterion_weight: "pod"
 use_partial_memory: True
-cuda_device: "cuda:1"
-start: 60
+cuda_device: "cuda:0"
+start: 20
+increment: 20
