--- a/config_hoc.yml
+++ b/config_hoc.yml
@@ -12,8 +12,9 @@ rehearsal: 20
 fixed_weight: False
 pod_loss: True
 type_update_criterion_weight: "pod"
-cuda_device: "cuda:1"
-use_partial_memory: False
+cuda_device: "cuda:0"
+use_partial_memory: True
 start: 20
 increment: 20
 method: "hoc"
+pod_loss_negative: True
